
[[x6.0-mqtt]]
==== MQTT ClientManager

A new MQTT `ClientManager` has been added to support a reusable MQTT connection across different channel adapters.
See <<./mqtt.adoc#mqtt-shared-client,Shared MQTT Client Support>> for more information.

[[x6.0-graphql]]
==== GraphQL Support

The GraphQL support has been added.
See <<./graphql.adoc#graphql,GraphQL Support>> for more information.

[[x6.0-smb]]
==== SMB Support

SMB support has been added from the Spring Integration Extensions project.
The Java DSL (see `org.springframework.integration.smb.dsl.Smb` factory) also has been added to this module.
An `SmbStreamingMessageSource` and `SmbOutboundGateway` implementation are introduced.
See <<./smb.adoc#smb,SMB Support>> for more information.

[[x6.0-jdbc]]
==== PostgreSQL Push Notification

A `PostgresSubscribableChannel` allows to receive push notifications via `PostgresChannelMessageTableSubscriber` upon new messages add to the `JdbcChannelMessageStore`.

See <<./jdbc.adoc#postgresql-push,PostgreSQL: Receiving Push Notifications>> for more information.

[[x6.0-rmq]]
==== RabbitMQ Stream Queue Support

The AMQP module has been enhanced to provide support for inbound and outbound channel adapters using RabbitMQ Stream Queues.
See <<./amqp.adoc#rmq-streams,RabbitMQ Stream Queue Support>> for more information.

[[x6.0-sftp]]
==== Apache MINA SFTP

The SFTP modules has been fully reworked from outdated JCraft JSch library to more robust and modern `org.apache.sshd:sshd-sftp` module of the Apache MINA project.

See <<./sftp.adoc#sftp,SFTP Adapters>> for more information.

[[x6.0-micrometer-observation]]
==== Micrometer Observation

Enabling observation for timers and tracing using Micrometer is now supported.
See <<./metrics.adoc#micrometer-observation,Micrometer Observation>> for more information.

[[x6.0-graalmv-polyglot]]
==== GraalVM Polyglot Support

The Scripting module now provides a `PolyglotScriptExecutor` implementation based on the GraalVM Polyglot support.